# p8e-wasm-go

./: .gitignore  Makefile  contract.js  go.mod  go.sum
cmd/p8e/: main.go
cmd/p8e/command/: pull.go  root.go  run.go
cmd/p8e/command/hello/: hello.pb.go
example/hello/: Makefile  hello.go  hello.wasm
example/hello-rust/: Cargo.toml  Makefile  build.rs
example/hello-rust/proto/: hello.proto
example/hello-rust/src/: lib.rs
example/hello-rust/src/proto/: hello.rs
example/p8e_attributes/: Cargo.toml
example/p8e_attributes/src/: lib.rs
example/p8e_dime/: Cargo.toml  build.rs
example/p8e_dime/.cargo/: config
example/p8e_dime/proto/: wasm.proto
example/p8e_dime/src/: errors.rs  lib.rs
example/p8e_dime/src/proto/: encryption.rs  mod.rs  util.rs  wasm.rs
example/p8e_helpers/: Cargo.toml
example/p8e_helpers/src/: lib.rs
