[package]
name = "hello-rust"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
crate-type = ["cdylib"]

[dependencies]
wasm-bindgen = "0.2"
protobuf = "3.0.3"
protobuf-json-mapping = "3.0.3"
p8e_attributes = { path = "../p8e_attributes" }
p8e_helpers = { path = "../p8e_helpers" }

[build-dependencies]
protobuf = "3.0.3"
protobuf-codegen = "3.0.3"