[package]
name = "p8e_attributes"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
darling = "0.14.1"
syn = "1.0.91"
lazy_static = "1.4.0"
quote = "1.0.18"
serde = { version = "1.0.137", features = ["derive"] }
serde_json = "1.0.81"
p8e_helpers = { path = "../p8e_helpers" }

[lib]
proc-macro = true