[package]
name = "p8e_attributes"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
darling = "0.14.1"
syn = "1.0.91"
quote = "1.0.18"
serde = { version = "1.0.137", features = ["derive"] }
serde_json = "1.0.81"
p8e_helpers = { path = "../p8e_helpers" }
proc-macro2 = "1.0.39"
uuid = "1.1.2"

[lib]
proc-macro = true